[package]
name = "meow"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = {version = "0.19.9", features = ["lexer"]}
regex = "1.7.3"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.19.9"
